src/test/resources/parser/valid/arithmetic/divisionInt.sbsc
// Test division

a = 4 / 2;

assert(a == 2);