src/test/resources/parser/invalid/value/invalidFunction.sbsc
// invoke a nonexistent function

a(4);